Fixed header color and working on aligning the content bxoes into center page

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -5,25 +5,27 @@ html * {
     background-color: #2D3047
 }
 
-
-
-header {;
-    padding: 20px o;
+header {
+    padding: 20px 0;
+    background-color: red !important;
 }
 
 .header-logo {
     display: block;
     color: white;
     font-size: 24px;
+    background-color: red !important;
 }
 
 .navbar {
     border: none;
     margin-bottom: 0;
+    background-color: red !important;
 }
 
 .navbar-content {
     text-align: center;
+    background-color: red !important;
 }
 
 
@@ -32,12 +34,13 @@ header {;
     padding: 0;
     list-style-type: none;
     display: inline-block;
-
+    background-color: red !important;
 }
 
 .navbar-nav li {
     margin-right: 15px;
     display: inline;
+    background-color: red !important;
 
 }
 
@@ -46,21 +49,23 @@ header {;
     margin-top: 10px;
     display: block;
     float: left;
-
+    background-color: red !important;
 }
 
 .navbar-right {
     float: right;
+    background-color: red !important;
 }
 
 .navbar-left a {
     text-decoration: none;
     margin-right: 15px;
+    background-color: red !important;
 }
 
 .navbar-nav .active a {
-    font-weight: bold
-
+    font-weight: bold;
+    background-color: red !important;
 }
 
 .navbar-nav a:hover {
@@ -69,7 +74,7 @@ header {;
 
 .col-md-8 {
     text-align: center;
-    margin-top: 10px;
+    padding-top: 20px;
     display: block;
     align-items: center;
 }
